--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,15 +1,18 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  background-color: rgb(19, 19, 19);
+  color: white;
 }
 
 .header,
 footer {
   width: 100%;
-  background-color: rgb(143, 0, 255);
+  background-color: rgb(143, 0, 0);
   text-align: center;
   color: white;
   margin-top: 0;
+  background-image: linear-gradient(90deg, #0D324D, #7F5A83);
 }
 
 h1 {
@@ -30,7 +33,7 @@ h1 {
   margin: 50px auto;
   width: 60%;
   box-shadow: 10px 10px rgb(100, 100, 100);
-
+  border-image: linear-gradient(270deg, #0D324D, #7F5A83) 1;
 }
 
 h2 {
@@ -53,4 +56,17 @@ footer {
 
 .underline {
   text-decoration: underline;
+}
+
+.source-link {
+  color: white;
+  text-decoration: none;
+}
+
+.source-link:hover {
+  opacity: 0.7;
+}
+
+.source-link:active {
+  opacity: 0.5;
 }
